--- a/JSON-Form/src/main/res/values/styles.xml
+++ b/JSON-Form/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="line_horizontal">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dip</item>
-        <item name="android:background">#999</item>
+        <item name="android:background">@color/form_line</item>
     </style>
 
 </resources>
