--- a/JSON-Form/src/main/res/layout/item_panel_layout.xml
+++ b/JSON-Form/src/main/res/layout/item_panel_layout.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:text="Name"
+        android:button="@drawable/item_checkbox"
         android:textColor="@color/form_label"
         android:textSize="16sp" />
 </RelativeLayout>
